2025-12-30T01:16:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20586439615 # 1396
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-30
* notice: last 14d: unq all: 32 41
* notice: prev accum: outdated-unq outdated-all / unq all: 5175 10220 / 5212 10263
* notice: next accum: outdated-unq outdated-all / unq all: 5177 10222 / 5212 10263
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-15] / []

2025-12-29T12:35:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20573017359 # 1395
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-29
* notice: last 14d: unq all: 33 42
* notice: prev accum: outdated-unq outdated-all / unq all: 5175 10220 / 5210 10261
* notice: next accum: outdated-unq outdated-all / unq all: 5175 10220 / 5212 10263
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-12-15 2025-12-29]

2025-12-29T01:22:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20562453414 # 1394
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-29
* notice: last 14d: unq all: 32 41
* notice: prev accum: outdated-unq outdated-all / unq all: 5169 10213 / 5210 10261
* notice: next accum: outdated-unq outdated-all / unq all: 5175 10220 / 5210 10261
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-14] / []

2025-12-28T12:31:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20553792685 # 1393