@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-30T01:16:38Z",
-  "count_outdated" : 10222,
-  "uniques_outdated" : 5177,
-  "count" : 10263,
-  "uniques" : 5212,
+  "timestamp" : "2025-12-30T12:34:39Z",
+  "count_outdated" : 10229,
+  "uniques_outdated" : 5183,
+  "count" : 10264,
+  "uniques" : 5213,
   "clones" : [
-    {
-      "timestamp": "2025-12-16T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ],
-      "uniques_decinc": [ 0, 6 ]
-    },
     {
       "timestamp": "2025-12-17T00:00:00Z",
       "count": 2,
@@ -103,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-12-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
