@@ -1,12 +1,7 @@
 {
-  "count": 41,
-  "uniques": 32,
+  "count": 35,
+  "uniques": 29,
   "clones": [
-    {
-      "timestamp": "2025-12-16T00:00:00Z",
-      "count": 7,
-      "uniques": 6
-    },
     {
       "timestamp": "2025-12-17T00:00:00Z",
       "count": 2,
@@ -56,6 +51,11 @@
       "timestamp": "2025-12-29T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-12-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
