@@ -1,3 +1,12 @@
+2025-12-30T12:34:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20596644146 # 1397
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-30
+* notice: last 14d: unq all: 29 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 5177 10222 / 5212 10263
+* notice: next accum: outdated-unq outdated-all / unq all: 5183 10229 / 5213 10264
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-12-16] / [2025-12-30]
+
 2025-12-30T01:16:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20586439615 # 1396
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-30
